--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <title>How To</title>
   <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
+<link rel="icon" href="/favicon.ico" size="16x16" type="image/x-icon" href="./resources/images/favicon.ico.png">
   <meta charset="utf-8">
     
      
