--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
   <title>How To</title>
+  <link href="./resources/css/reset.css" rel="stylesheet" type="text/css"/>
   <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
 <link rel="icon" size="16x16" type="image/x-icon" href="./resources/images/favicon.ico.png">
   <meta charset="utf-8">
@@ -9,7 +10,16 @@
      
 </head>
    <body>
-    <h1> How to Make a Website(The Easy Way)</h1>
+   <br></br>
+   <br></br>
+<br></br>
+<br></br>
+
+<br></br>
+
+
+    <h1> How to Make a Website (The Easy Way)</h1>
+    <h4>By Bradley Walker</h4>
 
     <h2>The Website</h2>
 
@@ -52,7 +62,7 @@
 <p>The (cd onedrive/documents/projects/firstProject) is the folder names we 'change directory' or 'cd' </p>
 <p>After this you can type cd (whatever your repository folders name is), next you will initialize the repository by typing 'git init'. It will initialize, 
   and then you can type 'git remote add origin https://github.com/ and whatever else your repository sheet says.</p>
-  <img src="./resources/images/github.jpg.jpeg">
+  <img src="./resources/images/github.jpg">
       <p>Next, you will type in 'git add .'(include the period in the command!) After this step it will ask who you are type in:
        <br> git config –global user.email “Put your Github email address here“</br>
 
@@ -63,12 +73,33 @@
   
   <h2> <div id="online">Getting Online</div></h2>
   <p>Getting your website isn't as hard as it seems. What you need to do it to is to go to Github pages in the settings and change your branch to the master branch. 
-    After a little while your site should be live, and now you are rady to add to it.</p> 
-      <h2> <div id="changes">Making Changes</div></h2>
+    After a little while your site should be live, and now you are ready to add to it.</p> 
+   <br></br>  
+<br></br>
+   <br></br>
+    <h2> <div id="changes">Making Changes</div></h2>
    <p>To make changes to your website all you need to do is to open an online text editor like VSC text editor. Make changes using your tags and anything else you want to do. 
     Then after you've added all you want, then you need to open GitBash you need to cd back to your repository's folder. 
     You then need to type <b>git add .</b> then you need to type in <b>'git commit -m "your command."'</b> finally to push all of the changes to your website you need to type<b>git push origin master</b></p>
   <h3>Conclusion</h3>
 <p>Those are the basic steps to creating a website. For more in depth website creation you could use websites like <a href="https://allinonehighschool.com/html-5-on-ep-all-in-one/#day1" target="_blank">epallinonehighschool.com</a> or Javascript</p>  
 </body>
+<footer>
+  Join me at other website(s):BradWalker17.github.com/DadPad/
+  
+</footer>
+<p>
+<br></br>
+
+
+<br></br>
+
+<br></br>
+
+<br></br>
+
+<br></br>
+
+</p>
+
 </html>
