--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 
 <br></br>
 
-
+<div id ="back"></div>
     <h1> How to Make a Website (The Easy Way)</h1>
     <h4>By Bradley Walker</h4>
 
     <h2>The Website</h2>
 
     <nav>
-       <button> <a href="#beginning">Beginning Steps</button></a>
-       <button> <a href="#github">Starting an Account</button></a>
-       <button> <a href="#online">Getting Online</button></a>
-       <button> <a href="#changes">Making Changes</button></a>
+        <a href="#beginning">Beginning Steps</a>
+        <a href="#github">Starting an Account</a>
+        <a href="#online">Getting Online</a>
+        <a href="#changes">Making Changes</a>
     </nav>
     <h2>Introduction</h2>
     <p>When beginning an html website from scratch, it is important to do all the main steps involved</p>
     <p>We will look at how to create a website from scratch and get it online.</p>
-   <h2> <div id = "beginning">Beginning Steps</div></h2>
+   <h2 class="definite"> <div id = "beginning">Beginning Steps</div></h2>
   
    <h3>Starting Files</h3>
   <p>
@@ -51,8 +51,8 @@
   <p>If you would like to learn more tags,<b> highly recommended</b>, there are many websites that have a list of them all.
     Another free, helpful source is the <a href="https://allinonehighschool.com/html-5-on-ep-all-in-one/#day1" target="_blank">epallinonehighschool.com</a>website.
   </p>
-  
-  <h2> <div id="github">Starting an Account</div></h2>
+ 
+  <h2 class="definite"> <div id="github">Starting an Account</div></h2>
   <p>The next crucial part to creating a website is getting it online, but to do this you will need to start a Github account using <a href="https://github.com/" target="_blank">Github.com</a>. 
     You don't have to use Github, but it is easier. Next, you need to start a repository and name it something you will remember (make sure that you make a file folder for it in File Explorer.) 
   You will be taken to a screen with different codes. Keep it, don't lose it. Next, open something called GitBash. It's a command line which you will need for your website. 
@@ -71,13 +71,14 @@
         Then, you will type 'git commit -m "Create page." '(include all that is within the 's .) Finally, you will type 'git push -u origin master'. 
         This will push your data to Github, and you will be able to begin getting your website online</p>
   
-  <h2> <div id="online">Getting Online</div></h2>
+  <h2 class="definite"> <div id="online">Getting Online</div></h2>
   <p>Getting your website isn't as hard as it seems. What you need to do it to is to go to Github pages in the settings and change your branch to the master branch. 
     After a little while your site should be live, and now you are ready to add to it.</p> 
    <br></br>  
 <br></br>
    <br></br>
-    <h2> <div id="changes">Making Changes</div></h2>
+   
+   <h2 class="definite"> <div id="changes">Making Changes</div></h2>
    <p>To make changes to your website all you need to do is to open an online text editor like VSC text editor. Make changes using your tags and anything else you want to do. 
     Then after you've added all you want, then you need to open GitBash you need to cd back to your repository's folder. 
     You then need to type <b>git add .</b> then you need to type in <b>'git commit -m "your command."'</b> finally to push all of the changes to your website you need to type<b>git push origin master</b></p>
@@ -90,7 +91,19 @@
 </footer>
 <p>
 <br></br>
+<nav>
+<br> <a href="#back">Click to Go to Top</a></br>
+ <br></br>
+  <br> <a href="#beginning">Beginning Steps</a></br>
+ <br></br>
+  <br><a href="#github">Github</a></br>
+  <br></br>
+ <br><a href="#online">Online</a></br>
+   <br></br>
+ <br><a href="#changes">Making Changes</a></br>
+ <br></br>
 
+  </nav>
 
 <br></br>
 
